--- a/code/SchoolManagementSystem/SchoolManagementSystem/SchoolManagementSystem.csproj
+++ b/code/SchoolManagementSystem/SchoolManagementSystem/SchoolManagementSystem.csproj
@@ -59,6 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="SmsController.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -91,6 +92,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SchoolManagementData\SchoolManagementData.csproj">
+      <Project>{409C093C-384F-4E12-A09C-405B2B31242A}</Project>
+      <Name>SchoolManagementData</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
