--- a/code/netbeans example/SchoolManagementSystem/nbproject/project.properties
+++ b/code/netbeans example/SchoolManagementSystem/nbproject/project.properties
@@ -25,10 +25,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/SchoolManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.swingx-0.9.5.jar=C:\\Program Files\\NetBeans 7.2 RC1\\ide\\modules\\ext\\swingx-0.9.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.swingx-0.9.5.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -52,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=my.schoolmanagementsystem.SchoolManagementSystemUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
