--- a/code/netbeans example/SMS/nbproject/private/private.properties
+++ b/code/netbeans example/SMS/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PoYeS\\.netbeans\\7.1.2\\build.properties
+user.properties.file=C:\\Users\\AMIT\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
