--- a/code/SMS-netbeans/nbproject/private/private.properties
+++ b/code/SMS-netbeans/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Documents and Settings\\Administrator\\Application Data\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\chandra\\AppData\\Roaming\\NetBeans\\7.2rc1\\build.properties
