--- a/code/C#SmsProject/SmsUI/MmmUI/SMSUI.csproj
+++ b/code/C#SmsProject/SmsUI/MmmUI/SMSUI.csproj
@@ -191,6 +191,14 @@
       <Project>{A866A332-2F75-4AC4-98F6-46FC1DCB9568}</Project>
       <Name>SmsStyle</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SmsData\SmsData.csproj">
+      <Project>{6B417D88-0291-4D6B-A344-70A276A904D6}</Project>
+      <Name>SmsData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SmsDb\SmsDb.csproj">
+      <Project>{C8D55DDA-FBC6-48FA-A744-47FD927E2D1A}</Project>
+      <Name>SmsDb</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\banner1.jpg" />
