student db can insert data

--- a/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
+++ b/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdmissionInfo.cs" />
     <Compile Include="StudentInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
