--- a/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
+++ b/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AdmissionInfo.cs" />
     <Compile Include="StudentInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeacherInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
