--- a/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
+++ b/code/C#SmsProject/SmsUI/SmsData/SmsData.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdmissionInfo.cs" />
+    <Compile Include="AttendanceInfo.cs" />
     <Compile Include="StudentInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeacherInfo.cs" />
